reform Mandat + upp till Valberedningen

--- a/main.tex
+++ b/main.tex
@@ -13,7 +13,7 @@
 \usepackage{xfrac}
 
 \newcommand{\motionsnamn}{Totalreform av styrdokument}
-\newcommand{\motionar}{Medlemmar insamlade som ämnar revidera allt (MISÄRA)}
+\newcommand{\motionar}{Medlemmar insamlade som ämnar revidera (MISÄR)}
 
 \newlist{beslut}{itemize}{1}
 \setlist[beslut]{label=\textbf{att}}
@@ -39,7 +39,7 @@
 
 \begin{document}
 \begin{center}
-\textsc{\huge\itshape Betänkande}\\[0.5cm]
+%\textsc{\huge\itshape Betänkande}\\[0.5cm]
 \textsc{\Huge Motion om}\\[0.5cm]
 \textsc{\huge \motionsnamn}\\[0.5cm]
 \textsc{\large \motionar\\}
@@ -63,10 +63,10 @@ En sammanfattning av de väsentliga ändringarna jämfört med tidigare dokument
     \item Före detta särskild ledamot erhåller rösträtt (och ska likställas med ordinarie medlem).
     \item Inspektor omfattas nu av offentlighetsprincipen.
     \item Sektionsordförande och SAMO är ej längre separata organ.
-    \item Praxis kodifieras angående frågor om mandat, t.ex. avsägelser och entlediganden.
+    \item Praxis kodifieras angående frågor om mandat, bl.a. valbarhetshinder, avsägelser och entlediganden.
     \item Bestämmelser om misstroendeförklaring förtydligas, men ska i allt materiellt tolkas lika.
-    \item En långtgående elimination av redudans i definitionen av organen, särskilt mellan stadga och reglemente.
-    \item TODO
+    \item TODO sektmöte
+    \item En långtgående elimination av redundans i definitionen av organen, särskilt mellan stadga och reglemente.
     \item En konsolidation av bestämmelser om ekonomi för sektionen och dess organ.
 \end{itemize}    
 
@@ -609,72 +609,26 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.1
       \label{4.1:rätta}
       
     \item \emph{Alla organ, med undantag för funktionärer, ska ha representation vid sektionsmötet.} \label{4.1:rep}
-\end{lydelse}
 
-\subsection{Mandat}
-Syftet är att införa ett avsnitt som konsoliderar frågor om mandat och val, eftersom det ansvaret utövas delvis parallellt av sektionsmöte och styrelse.
-Dessutom kodifieras praxis om entlediganden.
-
-Härigenom förskrivs i fråga om stadgan
-\begin{dels}
-    \item att ett nytt avsnitt 4.2 införs,
-    \item att rubriken för avsnittet ska lyda ''Mandat'',
-    \item att avsnittet i sin helhet ska ha följande lydelse.
-\end{dels}
-
-\begin{lydelse}
-    (se \S 2.4.1, \S 2.4.2)
-  
+  \switchcolumn*
+      (se \S 2.4.1, \S 2.4.2)
+      
   \switchcolumn
     \item Sektionsaktiv är person vald till post av sektionsmötet eller sektionsstyrelsen.
       \label{4.x:aktiv}
-  
+      
     \item Förtroendeposter \emph{förtecknas} i \emph{stadga eller} reglemente.
-    \emph{Förtroendevald är person vald till förtroendepost.}
+      \emph{Förtroendevald är person vald till förtroendepost.}
       \label{4.x:fortroende}
 
     \item \emph{Ekonomiskt ansvariga förtecknas i stadga eller reglemente.}
 
-    \item \emph{Ekonomiskt ansvarig ska vara förtroendevald och myndig.}
-
-  \switchcolumn*
-    (se \S 5.13.1, \S 9.1.3)
-  \switchcolumn
-    \subsubsection*{Tillsättande}
-    \item \emph{Post i sektionens organ tillsätts i vanliga fall genom personval på sektionsmöte.} \label{4.x:tillsätt}
-
-    \item Vid \emph{vakans kan} sektionsstyrelsen preliminärt tillsätta posten.
-    \emph{Beslutet fastställs} på nästkommande sektionsmöte.
-
-  \switchcolumn*
-    \item[] (se \S 2.1.2, \S 4.3.6, \S 4.3.8)
-    \item[] (se \S 4.3.8)
-  
-  \switchcolumn
-    \subsubsection*{Entledigande}
-    \item \emph{Sektionsaktiv kan avsäga sig sin post och på begäran entledigas av sektionsstyrelsen.
-    Beslutet fastställs på nästkommande sektionsmöte.}
-
-    \item \emph{Sektionsaktiv som upphör som medlem ska entledigas, såvida inte sektionsstyrelsen beslutar annorlunda.
-    Beslutet fastställs på nästkommande sektionsmöte.}
-      \label{4.x:kvarstå}
-
-    \item \emph{Vid entledigande av förtroendevald ska extra sektionsmöte utlysas inom 15 läsdagar där fyllnadsval ska äga rum}.
-
-    \item \emph{Vid entledigande av ekonomiskt ansvarig ska bokslut för perioden fram till fyllnadsvalet upprättas inom fyra veckor från fyllnadsvalet.}
-      \label{4.2:enteko}
-    
 \end{lydelse}
-
 
 \subsection{Ansvarsförhållanden}
 Syftet är att göra frågan om ansvar mindre stel och eliminera redundansen i frågan om delegation.
 
-Härigenom föreskrivs i fråga om stadgans avsnitt 4.2
-\begin{dels}
-    \item att avsnittet omnumreras till 4.3,
-    \item att avsnittet i sin helhet ska ha följande lydelse.
-\end{dels}
+Härigenom föreskrivs i fråga om stadgans avsnitt 4.2 att avsnittet i sin helhet ska ha följande lydelse.
 
 \begin{lydelse}
 	\item Sektionsmötet är sektionens högsta beslutande organ.
@@ -700,8 +654,9 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.2
     (se \S 4.3.9)
     
   \switchcolumn
-    \item \emph{Förtroendevalda svarar inför sektionsmötet. Övriga sektionsaktiva svarar inför sektionsstyrelsen.}
-      \label{4.2:ansvar}
+   \item \emph{Sektionsstyrelsen, talmanspresidiet, valberedningen, revisorer och förtroendevalda svarar inför sektionsmötet.} \label{4.2:ansvar1}
+   \item \emph{Övriga sektionsaktiva svarar inför sektionsstyrelsen.}
+      \label{4.2:ansvar2}
     %\item \emph{Hierarkin mellan sektionens organ i fråga om ansvarsförhållanden är som följer:
 	%\begin{enumerate}
 	%    \item Sektionsmötet är högsta instans.
@@ -720,18 +675,94 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.2
   
 \end{lydelse}
 
-\subsection{Misstroendeförklaring}
-Syftet är att förnya språket och samla organisatoriska detaljer som varit utspridda eller redundanta.
+\subsection{Tillsättande}
+Syftet är att införa två avsnitt som konsoliderar frågor om mandat och val, eftersom det ansvaret utövas delvis parallellt av sektionsmöte och styrelse.
+I detta avsnitt tydliggörs även valbarhetsregler.
+
+Härigenom förskrivs i fråga om stadgan
+\begin{dels}
+    \item att ett nytt avsnitt 4.3 införs,
+    \item att rubriken för avsnittet ska lyda ''Tillsättande'',
+    \item att avsnittet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+    (se \S 5.13.1, \S 9.1.3)
+  \switchcolumn
+    \item \emph{Post i sektionens organ tillsätts i vanliga fall genom personval på sektionsmöte.} \label{4.x:tillsätt}
+
+    \item Vid \emph{vakans kan} sektionsstyrelsen preliminärt tillsätta posten.
+    \emph{Beslutet fastställs} på nästkommande sektionsmöte.
+
+  \switchcolumn*
+    \item[] (se \S 5.9.1, \S 6.2.2, \S\S 13.1.4--5, samt reglemente)
+    \item[] (se \S 5.9.3, \S 13.1.8)
+    \item[] (se \S 13.1.2, samt reglemente)
+    \switchcolumn  
+    \subsubsection*{Valbarhet}
+    \item \emph{Ingen kan samtidigt inneha två förtroendeposter, eller två poster i samma organ.}
+
+    \item \emph{Ingen kan samtidigt inneha post i två eller fler av sektionsstyrelsen, talmanspresidiet, revisorer och valberedning.} \label{4.x:valbar.dubbel}
+
+    \item \emph{Talman, vice talman och ledamot i valberedningen får dessutom ej inneha post i kommitté eller nämnd.} \label{4.x:valbar.ober}
+
+    \item \emph{Revisor får dessutom ej inneha ekonomiskt ansvar inom sektionen.}
+      
+    \item \emph{Talmanspresidiet och revisorer behöver ej vara medlemmar av sektionen.}
+
+    \item \emph{Revisor ska vara myndig.}
+      
+    \item \emph{Ekonomiskt ansvarig ska vara förtroendevald och myndig.}
+\end{lydelse}
+
+\subsection{Entledigande}
+Syftet är stadga generella bestämmelser om entledigande i stället för onödigt detaljerade regler om misstroende.
+Dessutom förnyas språket och organisatoriska detaljer som varit utspridda eller redundanta samlas.
 Förenklingar genomförs i enlighet med föregående avsnitt.
 
 Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
 \begin{dels}
-    \item att avsnittets rubrik ska lyda ''Misstroendeförklaring'',
+    \item att avsnittets rubrik ska lyda ''Entledigande'',
     \item att avsnittet omnumreras till 4.4,
     \item att avsnittet i sin helhet ska ha följande lydelse.
 \end{dels}
 
 \begin{lydelse}
+  \item[] (se \S 2.1.2, \S 4.3.6, \S 4.3.8)
+  \item[] (se \S 4.3.8)
+  
+\switchcolumn
+  \setcounter{enumi}{0}
+  \item \emph{Sektionsaktiv kan avsäga sig sin post och på begäran entledigas av sektionsstyrelsen.
+      Beslutet fastställs på nästkommande sektionsmöte.}
+
+  \item \emph{Sektionsaktiv som upphör som medlem ska entledigas, såvida inte sektionsstyrelsen beslutar annorlunda.
+      Beslutet fastställs på nästkommande sektionsmöte.}
+  \label{4.x:kvarstå}
+
+  \item \emph{Vid entledigande av förtroendevald ska extra sektionsmöte utlysas inom 15 läsdagar där fyllnadsval ska äga rum}.
+
+  \item \emph{Vid entledigande av ekonomiskt ansvarig ska bokslut för perioden fram till fyllnadsvalet upprättas inom fyra veckor från fyllnadsvalet.}
+    \label{4.2:enteko}
+
+    \switchcolumn*
+    \item[] (se \S\S 4.3.6--7, \S 4.3.10)
+    \switchcolumn
+    \subsubsection*{Sektionsstyrelsen}
+    \item Om sektionsstyrelsen \emph{i sin helhet entledigas ska omedelbart} interimstyrelse och ny valberedning väljas.
+
+    \item Interimstyrelsen övertar styrelsens befogenheter och skyldigheter \emph{tills ny styrelse är vald}, men får endast handha löpande ärenden.
+
+    \item Om sektionsordförande \emph{entledigas} tar vice sektionsordförande över \emph{som tillförordnad sådan} tills ny sektionsordförande är vald.
+
+    \subsubsection*{Talmanspresidiet}
+    \item \emph{Om talmanspresidiet i sin helhet entledigas sker utlysning av och kallelse till extra sektionsmöte där fyllnadsval äger rum av sektionsordförande.
+    Sektionsmötet väljer ett temporärt presidium för mötet.}
+
+    \item \emph{Om talmannen entledigas tar vice talman över som tillförordnad sådan tills ny talman är vald.}
+     
+
+  \switchcolumn*
     \setcounter{subsection}{3}
     \item Misstroendevotum kan kallas av
 	  \begin{itemize}
@@ -764,8 +795,8 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
   	\item Ifall misstroendevotum av talmanspresidiet, eller enskild medlem av talmanspresidiet, lyfts tillses kallelse av sektionsmötet av sektionsordförande. Sektionsmötet väljer ett temporärt talmanspresidie till sektionsmötet.
 
   \switchcolumn
-    \setcounter{subsection}{4}  
-    \item \emph{En högre instans enligt \S\ref{4.2:ansvar} kan förklara att en sektionsaktiv inte har dess förtroende.}
+    \subsubsection*{Misstroendeförklaring}
+    \item \emph{En högre instans enligt \S\S\ref{4.2:ansvar1}--\ref{4.2:ansvar2} kan förklara att en sektionsaktiv inte har dess förtroende.}
 
     \item \emph{Yrkande om misstroendeförklaring kan väckas av antingen} styrelseledamot, 25 medlemmar eller revisor.
 
@@ -774,30 +805,14 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
 
     \item \emph{Svarande vars förtroende behandlas ska under alla omständigheter beredas möjlighet att närvara och tala för sin sak.}
 
-    \item \emph{Entledigande till följd av misstroende sker med sluten omröstning med minst \sfrac{2}{3} majoritet.}
-      
-    \subsubsection*{Sektionsstyrelsen}
-    \item Om sektionsstyrelsen \emph{i sin helhet entledigas} genom misstroende\emph{förklaring ska omedelbart} interimstyrelse och ny valberedning väljas.
-
-    \item Interimstyrelsen övertar styrelsens befogenheter och skyldigheter \emph{tills ny styrelse är vald}, men får endast handha löpande ärenden.
-
-    \item Om sektionsordförande \emph{entledigas} genom misstroende\emph{förklaring} tar vice sektionsordförande över \emph{som tillförordnad sådan} tills ny sektionsordförande är vald.
-
-    \subsubsection*{Talmanspresidiet}
-    \item \emph{Om yrkande om missförtroendeförklaring} eller \emph{entledigande} avser \emph{talmanspresidiet i del eller helhet sker utlysning av och kallelse till extra} sektionsmöte av sektionsordförande.
-    Sektionsmötet väljer ett temporärt presidium för mötet.
-
-    \item \emph{Om talmanspresidiet i sin helhet entledigas genom misstroendeförklaring sker utlysning av och kallelse till extra sektionsmöte där fyllnadsval äger rum av sektionsordförande.
-    Sektionsmötet väljer ett temporärt presidium för mötet.}
-
-    \item \emph{Om talmannen entledigas genom misstroendeförklaring tar vice talman över som tillförordnad sådan tills ny talman är vald.}
-      
-    \subsubsection*{Ekonomiskt ansvarig}
-    \item Om ekonomiskt ansvarig \emph{entledigas} genom misstroende\emph{förklaring} beslutar \emph{sektionsmötet} om \emph{bokslutet enligt \S\ref{4.2:enteko}} upprättas av avgående eller nyvald kassör.
-
-    \item Den nyvalda kassören \emph{kan} ej hållas ansvarig för brister i denna ekonomiska redovisning.
-
+    \item \emph{Entledigande till följd av misstroende sker med sluten omröstning med minst \sfrac{2}{3} majoritet.}  
+     
+    \item \emph{Om yrkande om missförtroendeförklaring} avser \emph{talmanspresidiet i del eller helhet sker utlysning av och kallelse till extra} sektionsmöte av sektionsordförande.
+      Sektionsmötet väljer ett temporärt presidium för mötet.
+    
+    \item Om ekonomiskt ansvarig \emph{entledigas} genom misstroende\emph{förklaring} beslutar \emph{sektionsmötet} om \emph{bokslutet enligt \S\ref{4.2:enteko}} upprättas av avgående eller nyvald kassör. De nyvalda \emph{ekonomiskt ansvariga anses fria från ansvar för föregående redovisning.}
 \end{lydelse}
+\setcounter{subsection}{4}    
 
 \subsection{Överklagan}
 Syftet är att konsolidera bestämmelser om överklagan från övriga kapitel till ett enda ställe.
@@ -834,6 +849,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 5.1
     \item[] ---
   \switchcolumn
   \setcounter{subsection}{0}
+  \setcounter{enumi}{0}
     \item Sektionsmötet är sektionens högsta beslutande organ, i vilket samtliga medlemmar äger rätt att delta.
 
     \item \emph{Fråga av större principiell betydelse ska avgöras av sektionsmötet.}
@@ -1001,8 +1017,8 @@ Härigenom föreskrivs i fråga om stadgans kapitel 9
   \item Sektionskommitté skall verka för sektionens bästa och ha en i reglementet fastslagen uppgift.
 \switchcolumn
   \setcounter{section}{8}
-  \item \emph{Kommitté verkar för att uppfylla sektionens ändamål och ska vara dess representanter.}
-  \item \emph{Kommitté fastställs och förtecknas i reglemente, med syfte, sammansättning och åligganden.}
+  \item \emph{Kommittéer verkar för att uppfylla sektionens ändamål och ska vara dess representanter.}
+  \item \emph{Kommittéer fastställs och förtecknas i reglemente, med syfte, sammansättning och åligganden.}
   \item \emph{Sammansättningen ska åtminstone innehålla ordförande och kassör, vilka är förtroendeposter och ekonomiskt ansvariga.}
   \item[] \emph{(ersätts av \S\ref{4.x:tillsätt} och \S\ref{13.x:valBfp})}
 \end{lydelse}
@@ -1027,8 +1043,8 @@ Härigenom föreskrivs i fråga om stadgans kapitel 10
   \item Sektionsförening skall verka för sektionens bästa och ha en i reglementet fastslagen uppgift.
 \switchcolumn
   \setcounter{section}{9}
-  \item \emph{Sektionsförening verkar för att uppfylla sektionens ändamål.}
-  \item \emph{Sektionsförening fastställs och förtecknas i reglemente, med sammansättning och åligganden.}
+  \item \emph{Sektionsföreningar verkar för att uppfylla sektionens ändamål.}
+  \item \emph{Sektionsföreningar fastställs och förtecknas i reglemente, med sammansättning och åligganden.}
   \item[] \emph{(ersätts av \S\ref{4.x:tillsätt})}
 \end{lydelse}
 \setcounter{section}{9}
@@ -1054,8 +1070,8 @@ Härigenom föreskrivs i fråga om stadgans kapitel 11
 mentet.
 \switchcolumn
 \setcounter{section}{10}
-\item \emph{Funktionär verkar för att uppfylla sektionens ändamål genom enskild uppgift.}
-\item \emph{Funktionär fastställs och förtecknas i reglemente, med sammansättning och åligganden.}
+\item \emph{Funktionärer verkar för att uppfylla sektionens ändamål genom enskild uppgift.}
+\item \emph{Funktionärer fastställs och förtecknas i reglemente, med sammansättning och åligganden.}
 \item \emph{Om reglemente så föreskriver kan funktionär tillsättas på annat sätt än enligt \S\ref{4.x:tillsätt}.}
 \item[] \emph{(redundant)}
 \end{lydelse}
@@ -1089,7 +1105,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 12
   \item Sektionens intresseföreningar är listade i reglementet.
 \switchcolumn
   \item Intresseföreningsstatus beviljas och fråntas av sektionsmötet.
-  \item Intresseförening \emph{förtecknas} i reglemente.
+  \item Intresseföreningar \emph{förtecknas} i reglemente.
 \end{lydelse}
 \setcounter{section}{11}
 \setcounter{subsection}{0}
@@ -1114,7 +1130,106 @@ Härigenom föreskrivs i fråga om stadgans kapitel 12
 \setcounter{section}{11}
 \setcounter{subsection}{1}
 
-\subsection{Ekonomi}
+\subsection{Ekonomi och revision}
+\begin{lydelse}
+  \setcounter{section}{12}
+  \setcounter{subsection}{6}
+  \item Intresseförening skall ha en fristående ekonomi.
+  \item Intresseförenings verksamhet och ekonomi granskas, utöver deras egna revisorer, av sektionens revisorer.
+  \item Senast tre veckor efter att årsmötet godkänt verksamhetsberättelsen för föregående år skall denna lämnas till sektionsstyrelsen och frågan om ansvarsfrihet för intresseföreningens aktuella styrelse skall behandlas.
+  \item Senast tre veckor efter att intresseföreningens revisors revisionsberättelse godkänts av årsmötet skall av sektionsrevisorerna begärt material lämnas till dessa.
+\switchcolumn
+  \setcounter{section}{11}
+  \item Intresseförening \emph{ska} ha \emph{ekonomi fristående från sektionen}.
+  \item Intresseförening\emph{ar}s verksamhet och ekonomi granskas, utöver \emph{egen revision}, av sektionens revisorer.
+  \item \emph{Efter att intresseförenings årsmöte behandlat förgående verksamhetsår ska alla handlingar inom tre veckor tillsändas sektionsstyrelsen och sektionens revisorer.}
+  \item \emph{Sektionsstyrelsen prövar frågan om ansvarsfrihet för intresseföreningens styrelse efter fullgjort verksamhetsår.}
+\end{lydelse}
+\setcounter{section}{11}
+\setcounter{subsection}{2}
+
+\section{Talmanspresidiet}
+Syftet är att ge Talmanspresidiet som det organ det är ett eget kapitel.
+Det tydliggör hur stadga och reglemente speglar sektionens struktur.
+Presidiets sammansättning lyfts till stadgan, eftersom reglerna om organisation och ansvar ändå nämner vice talman.
+Notera att valbarhetshindren flyttats upp till tidigare kapitel.
+
+Härigenom föreskrivs i fråga om stadgans avsnitt 5.9
+\begin{dels}
+  \item att avsnittet ska omformas och flyttas till kapitel 12,
+  \item att det nya kapitlet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{section}{5}
+  \setcounter{subsection}{9}
+  \item Talmannen väljs av sektionsmötet. Talmannen får ej vara medlem av sektionsstyrelsen.
+  \item Talmannen ska leda sektionsmötet i överensstämmelse med stadgan, reglementet samt av sektionsmötet fastslagen mötesordning.
+  \item Talmannen behöver ej vara medlem av sektionen.
+  \item Talmanspresidiet består av talman och övriga ledamöter i enlighet med reglementet.
+\switchcolumn
+  \item \emph{Talmanspresidiet leder sektionsmötet och förvaltar sektionens demokratiska grund.}
+  \item Talmanspresidiet består av talman\emph{, vice talman och sekreterare.}
+\end{lydelse}
+\setcounter{section}{12}
+
+\section{Valberedningen}
+Syftet är redaktionellt.
+En del redundans (t.ex. valprocess, ansvarsbeskrivning) tas bort.
+Jävsfrågor sänks ned till reglemente.
+Proceduren för val av ordförande och vice ordförande sänks ned till reglemente.
+
+Härigenom föreskrivs i fråga om stadgans kapitel 6
+\begin{dels}
+  \item att kapitlet omnumreras till 13,
+  \item att kapitlet i sin helhet ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{section}{6}
+  \setcounter{subsection}{1}
+  \item Sektionens valberedning skall väljas av sektionsmötet. Valberedningen skall agera oberoende.
+  \item Ledamot i valberedningen skall ej vara jävig gentemot dem den valbereder.
+  \setcounter{subsection}{2}
+  \setcounter{enumi}{0}
+  \item Valberedningen består av 3---7 ledamöter varav två internt väljs till ordförande respektive vice ordförande.
+    % dagens trigger att det är ett långt tankstreck >:(
+  \item Ledamot i valberedningen får ej vara medlem i sektionsstyrelsen eller någon kommitté eller nämnd som har representant i sektionsstyrelsen.
+  \item I det fall då valberedningen ej är fulltalig och sektionsstyrelsen så anser lämpligt har sektionsstyrelsen möjlighet att temporärt välja kvarstående valberedningsposter inför varje valberedningsprocess. Dessa temporära medlemmar får inneha post i sektionsstyrelsen.
+  \setcounter{subsection}{4}
+  \setcounter{enumi}{0}  
+  \item Valberedningen ansvarar för nomineringar till samtliga poster i sektionsstyrelsen. Därutöver ansvarar valberedningen för nomineringar till förtroendeposter och övriga poster på sektionen enligt reglementet.
+
+  \switchcolumn
+  \item Valberedningen ansvarar för \emph{oberoende} nomineringar till \emph{samtliga förtroendeposter, inklusive sektionsstyrelsen,} och övriga poster enligt reglemente. \label{13.x:valBfp}
+  \item Valberedningen består av 3--7 ledamöter varav två internt väljs till ordförande respektive vice ordförande.
+  \item \emph{Vid vakans kan sektionsstyrelsen tillförordna valberedningsledamöter till nästa sektionsmöte. }
+
+  \item[] \emph{(ersätts av \S\S\ref{4.x:valbar.dubbel}--\ref{4.x:valbar.ober})}
+\end{lydelse}
+\setcounter{section}{13}
+\setcounter{subsection}{0}
+
+\subsection{Nomineringsbeslut}
+\begin{lydelse}
+  \setcounter{section}{6}
+  \setcounter{subsection}{3}
+  \item Vid valberedningens första sammanträde skall ordförande och vice ordförande väljas. Minst 3 av valberedningens ledamöter måste då vara närvarande.
+  \item När valberedningen sammanträder har max två medlemmar ur berörd styrelse, nämnd, kommitté, sektions\-förening eller funktionär närvaro-, för\-slags-, yttrande- och rösträtt. Valberedningens ordförande är ordförande samt sammankallande för valberedningen.
+  \item Valberedningen är beslutsförig om dess ordförande, eller vice ordförande, minst två ytterligare
+ledamöter samt minst en representant för berörd styrelse, nämnd, kommitté eller funktionär
+är närvarande.
+  \setcounter{subsection}{5}
+  \setcounter{enumi}{0}
+  \item Valberedningens nomineringar skall anslås i enlighet med reglementet.
+  \switchcolumn
+  \item[] \emph{(ersätts av reglemente)}
+  \item \emph{Valberedningen sammanträder för nominering på kallelse av ordförande. Upp till två representanter för organ till vilket ska nomineras får adjungeras.}
+  \item Valberedningen är beslutsför \emph{om minst tre ledamöter är närvarande inklusive ordförande eller vice ordförande}, samt minst \emph{en adjungerad representant för organ till vilket ska nomineras.}
+  \item Valberedningens nomineringar anslås i enlighet med reglemente.
+\end{lydelse}
+\setcounter{section}{13}
+\setcounter{subsection}{1}
 
 %\section{Ekonomi och revision}
 
