--- a/main.tex
+++ b/main.tex
@@ -68,6 +68,7 @@ En sammanfattning av de väsentliga ändringarna jämfört med tidigare dokument
     \item TODO sektmöte
     \item En långtgående elimination av redundans i definitionen av organen, särskilt mellan stadga och reglemente.
     \item En konsolidation av bestämmelser om ekonomi för sektionen och dess organ.
+    \item Förtydligande görs kring stadgeändringar och reglementesändringar för att lösa frågeställningar kring ändringsyrkanden.
 \end{itemize}    
 
 \section*{Yrkanden}
@@ -77,7 +78,8 @@ En sammanfattning av de väsentliga ändringarna jämfört med tidigare dokument
 	\item sektionsstyrelsen åläggs göra övriga ändringar i styrdokument tills det att reviderad stadga träder i kraft.
 	\item sektionsmötet beslutar om följande övergångsbestämmelser:
 	\begin{itemize}
-        \item alla särskilda ledamöter utnämns till särskilda medlemmar då reviderad stadga träder i kraft.
+    \item alla särskilda ledamöter utnämns till särskilda medlemmar då reviderad stadga träder i kraft,
+    \item alla sektionsaktiva valda till post de ej längre är valbara till enligt avsnitt \ref{4.x:tillsättande} tillåts kvarstå till mandatperiodens slut.
 	\end{itemize}
 \end{beslut}
 
@@ -103,18 +105,19 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 1.1 att \S 1.1.1 ska ha föl
 \end{lydelse}
 
 \subsection{Verksamhet}
-Syftet är att tillfoga styrelsens säte, vilket är allmän föreningsformalia som saknas.
+Syftet är dels att förtydliga hur begreppet verksamhetsår används, dels att tillfoga styrelsens säte vilket är allmän föreningsformalia som saknas.
 
 Härigenom föreskrivs i fråga om stadgans avsnitt 1.2
 \begin{dels}
     \item att avsnittets rubrik ska lyda ''Verksamhet'',
-    \item att \S 1.2.2 ska införas av följande lydelse.
+    \item att avsnittet ska ha följande lydelse.
 \end{dels}
 
 \begin{lydelse}
-    ---
+    \item Sektionens verksamhetsår löper från 1 juli till 30 juni.
+    \item[] ---
   \switchcolumn
-  \setcounter{enumi}{1}
+    \item Sektionens \emph{räkenskapsår} löper från 1 juli till 30 juni. \emph{Ett organ på sektionen får ha annat verksamhetsår enligt reglemente.}
     \item \emph{Sektionsstyrelsen ska ha sitt säte i Göteborg.}
 \end{lydelse}
 
@@ -532,7 +535,7 @@ Härigenom föreskrivs i fråga om stadgans kapitel 3 att kapitlet i sin helhet 
 \section{Organisation och ansvar}
 \subsection{Verksamhetsutövning}
 Syftet är att förnya språket och konsolidera verksamhetsgemensamma bestämmelser.
-Sektionsordförande och studerandearbetsmiljöombud är ej längre ett separata organ inom sektionen.
+Sektionsordförande och studerandearbetsmiljöombud är ej längre separata organ inom sektionen, utan omfattas båda av sektionsstyrelsen per reglemente.
 
 Härigenom föreskrivs i fråga om stadgans avsnitt 4.1
 \begin{dels}
@@ -625,7 +628,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.1
 
 \end{lydelse}
 
-\subsection{Ansvarsförhållanden}
+\subsection{Ansvarsförhållanden} \label{4.2:ansvar}
 Syftet är att göra frågan om ansvar mindre stel och eliminera redundansen i frågan om delegation.
 
 Härigenom föreskrivs i fråga om stadgans avsnitt 4.2 att avsnittet i sin helhet ska ha följande lydelse.
@@ -670,14 +673,15 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.2 att avsnittet i sin helh
 
   \switchcolumn
     \subsubsection*{Delegation} 
-    \item \emph{Överordnat organ äger rätt att delegera ansvar och uppgifter samt beordra åtgärd enligt \S\S\ref{4.1:högststart}--\ref{4.1:högstend}.} 
+    \item \emph{Överordnat organ enligt detta avsnitt äger rätt att delegera ansvar och uppgifter samt beordra åtgärd.} 
       \label{4.x:delegation}
   
 \end{lydelse}
 
-\subsection{Tillsättande}
+\subsection{Tillsättande} \label{4.x:tillsättande}
 Syftet är att införa två avsnitt som konsoliderar frågor om mandat och val, eftersom det ansvaret utövas delvis parallellt av sektionsmöte och styrelse.
 I detta avsnitt tydliggörs även valbarhetsregler.
+\emph{Tillhörande övergångsbestämmelse finns.}
 
 Härigenom förskrivs i fråga om stadgan
 \begin{dels}
@@ -704,13 +708,13 @@ Härigenom förskrivs i fråga om stadgan
 
     \item \emph{Ingen kan samtidigt inneha post i två eller fler av sektionsstyrelsen, talmanspresidiet, revisorer och valberedning.} \label{4.x:valbar.dubbel}
 
-    \item \emph{Talman, vice talman och ledamot i valberedningen får dessutom ej inneha post i kommitté eller nämnd.} \label{4.x:valbar.ober}
+    \item \emph{Talman, vice talman och ledamot i valberedningen får dessutom ej inneha post i studienämnden eller kommitté.} \label{4.x:valbar.ober}
 
     \item \emph{Revisor får dessutom ej inneha ekonomiskt ansvar inom sektionen.}
       
     \item \emph{Talmanspresidiet och revisorer behöver ej vara medlemmar av sektionen.}
 
-    \item \emph{Revisor ska vara myndig.}
+    \item \emph{Revisor ska vara myndig.} \label{4.x:valbar.revisormyndig}
       
     \item \emph{Ekonomiskt ansvarig ska vara förtroendevald och myndig.}
 \end{lydelse}
@@ -742,7 +746,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
 
   \item \emph{Vid entledigande av förtroendevald ska extra sektionsmöte utlysas inom 15 läsdagar där fyllnadsval ska äga rum}.
 
-  \item \emph{Vid entledigande av ekonomiskt ansvarig ska bokslut för perioden fram till fyllnadsvalet upprättas inom fyra veckor från fyllnadsvalet.}
+  \item \emph{Vid entledigande av ekonomiskt ansvarig ska bokslut för perioden fram till fyllnadsvalet upprättas inom fyra veckor från fyllnadsvalet, och revision ska ske.}
     \label{4.2:enteko}
 
     \switchcolumn*
@@ -796,7 +800,7 @@ Härigenom föreskrivs i fråga om stadgans avsnitt 4.3
 
   \switchcolumn
     \subsubsection*{Misstroendeförklaring}
-    \item \emph{En högre instans enligt \S\S\ref{4.2:ansvar1}--\ref{4.2:ansvar2} kan förklara att en sektionsaktiv inte har dess förtroende.}
+    \item \emph{En högre instans enligt avsnitt~\ref{4.2:ansvar} kan förklara att en sektionsaktiv inte har dess förtroende.}
 
     \item \emph{Yrkande om misstroendeförklaring kan väckas av antingen} styrelseledamot, 25 medlemmar eller revisor.
 
@@ -1182,7 +1186,7 @@ Proceduren för val av ordförande och vice ordförande sänks ned till reglemen
 Härigenom föreskrivs i fråga om stadgans kapitel 6
 \begin{dels}
   \item att kapitlet omnumreras till 13,
-  \item att kapitlet i sin helhet ska ha följande lydelse.
+  \item att kapitlet i sin helhet, inklusive avsnitt, ska ha följande lydelse.
 \end{dels}
 
 \begin{lydelse}
@@ -1231,20 +1235,184 @@ ledamöter samt minst en representant för berörd styrelse, nämnd, kommitté e
 \setcounter{section}{13}
 \setcounter{subsection}{1}
 
-%\section{Ekonomi och revision}
+\section{Ekonomi och revision}
+Syftet är att konsolidera bestämmelser om ekonomi och revision till ett enda lättillgängligt ställe.
+Detta görs genom att omstrukturera kapitlet för revision.
+Många bestämmelser överförs från andra kapitel.
 
-% org nr
+Härigenom föreskrivs i fråga om stadgans kapitel 13
+\begin{dels}
+  \item att kapitlet omnumreras till 14,
+  \item att kapitlets rubrik ska lyda ''Ekonomi och revision'',
+  \item att kapitlet i sin helhet, inklusive avsnitt, ska ha följande lydelse.
+\end{dels}
 
-% firma teckn
-% \item Sektionsordförande \emph{och} sektionskassör tecknar sektionens firma var för sig.
+\begin{lydelse}
+  \item[] ---
 
-% \subsection{Redovisning}
-% ansvar från SS
+  \item[] (se \S 7.4.1)
+  
+  \switchcolumn
+
+  \item \emph{Sektionens organisationsnummer är 857208-8477.}
+
+  \item \emph{Sektionens firma tecknas av sektionsordförande och sektionskassör var för sig.}
+\end{lydelse}
+
+\subsection{Redovisning och ansvarsfrihet}
+\begin{lydelse}
+  \item[] (se \S 8.7.2, \S 9.3.4, \S 9.4.2, \S 10.3.3, \S 10.4.2, \S 11.4.1)
+  \item[] (se \S 13.1.9)
+  \item[] (se \S 13.3.1)
+  \switchcolumn
+  \setcounter{enumi}{0}  
+  \item \emph{Sektionsstyrelsen upprättar gemensamt bokslut för sektionen, innefattande alla organ utom intresseföreningar.}
+  \item \emph{Studienämnden, kommittéer och övriga organ enligt reglemente upprättar dessutom egen löpande redovising och delbokslut.}
+  \item \emph{Sektionsstyrelsen handhar annars den löpande redovisningen.}
+  \item \emph{Bokslut och årsredovisning enligt detta avsnitt presenteras vid första ordinarie sektionsmöte efter verksamhetsårets slut.
+      Handlingarna tillställs revisorer, sektionsstyrelsen och talmanspresidiet senast 11 läsdagar innan.} \label{14.x:tillställa}
+  \item \emph{Frågan om ansvarsfrihet för förtroendeposter behandlas då av sektionsmötet.}
+\end{lydelse}
 % budget
 % bokslut
 
-% \subsection{Revisor}
-% \subsection{Ansvarsfrihet}
+\subsection{Revisor}
+\begin{lydelse}
+  \setcounter{section}{13}
+  \setcounter{subsection}{1}
+  \item Sektionsmötet utser två lekmannarevisorer med uppgift att granska sektionens verksamhet och ekonomi.
+  \item Revisor skall vara myndig.
+  \item Revisor skall ej vara jävig gentemot de de granskar.
+  \item Revisor kan ej vara medlem av sektionsstyrelsen under sitt verksamhetsår.
+  \item Revisor kan ej inneha ekonomiskt ansvar inom sektionen.
+  \item En revisor kan ej granska ekonomin för en kommitté, sektionsförening, nämnd eller sektionsstyrelse för ett år då denne var medlem av denna eller direkt påföljande år.
+  \item I de fall då samtliga verksamheter inte kan granskas av ordinarie revisorer kan extra revisor väljas för att granska dessa verksamheter.
+  \item Revisor behöver ej vara medlem av sektionen.
+ 
+  \switchcolumn
+  \setcounter{enumi}{0}  
+  \item \emph{Lekmannarevisorerna granskar oberoende och kontinuerligt sektionens verksamhet och ekonomi.}
+
+  \item \emph{Revisor får ej granska verksamhetsår för organ, då denna var ledamot det året eller föregående, eller annat jäv föreligger.} \label{14.x:revisorjäv}
+
+  \item \emph{Två ordinare revisorer väljs. Om revisorer enligt \S\ref{14.x:revisorjäv} inte kan granska samtliga organ väljs extra revisor för dessa.}
+
+  \item[] \emph{(ersätts av \S\S\ref{4.x:valbar.dubbel}--\ref{4.x:valbar.revisormyndig})}
+
+  \switchcolumn*
+  \item Räkenskaper och övriga handlingar skall tillställas revisorerna senast 10 läsdagar före ordinarie sektionsmöte.
+    \setcounter{subsection}{1}
+    \setcounter{enumi}{0}  
+  \item Det åligger revisorerna att anslå revisionsberättelser senast tre läsdagar före ordinarie sektionsmöte.
+  \item Revisionsberättelsen skall innehålla yttrande i fråga om ansvarsfrihet för berörda personer.
+  \item Det åligger revisorerna att under året kontinuerligt granska räkenskaper och förvaltning.
+ 
+  \switchcolumn
+  \item[] \emph{(ersätts av \S\ref{14.x:tillställa})}
+ 
+  \item \emph{Revisor åligger att avge och anslå revisionberättelse, inklusive yttrande angående ansvarsfrihet, senast 4 läsdagar innan sektionsmöte.}
+
+\end{lydelse}
+\setcounter{section}{14}
+\setcounter{subsection}{2}
+\setcounter{enumi}{0}
+
+\section{Styrdokument}
+Syftet är dels redaktionellt, dels att förtydliga ändringsförfarandet.
+En gammal tvist om huruvida ändringsyrkanden kan göras och påverkar stageändringen löses.
+Eftersom talmannen har rätt att förordna vilka sektionsmöten är ordinarie (det är de vilka inte kallas på särskild anmodan) läggs tidskrav till för stadgeändring.
+
+Härigenom föreskrivs i fråga om stadgans kapitel 14
+\begin{dels}
+  \item att kapitlet omnumreras till 15,
+  \item att kapitlet i sin helhet, inklusive avsnitt, ska ha följande lydelse.
+\end{dels}
+
+\begin{lydelse}
+  \setcounter{section}{14}
+  \setcounter{subsection}{1}
+  \item Förutom denna stadga finns reglemente och övriga styrdokument i enlighet med reglementet.
+  \setcounter{subsection}{6}
+  \setcounter{enumi}{0}  
+  \item Originalstadgar tillhandahas av sektionsstyrelsen.
+  \switchcolumn
+  \item \emph{Utöver denna stadga ska finnas reglemente och övriga styrdokument förtecknade däri.}
+  \item Originalstadgar tillhandahas av sektionsstyrelsen.
+\end{lydelse}
+\setcounter{section}{15}
+\setcounter{subsection}{0}
+
+\subsection{Ändring}
+\begin{lydelse}
+  \setcounter{subsection}{2}
+  \item Ändring av eller tillägg till denna stadga inklusive dess bilagor kan endast göras av sektionsmötet och om minst 2/3 av de närvarande är om beslutet ense under två på varandra följande ordinarie sektionsmöten och den föreslagna lydelsen varit anslagen tillsammans med kallelsen.
+  \item Ändring av eller tillägg till denna stadga skall godkännas av Chalmers Studentkårs styrelse.
+  \setcounter{subsection}{3}
+  \setcounter{enumi}{0}  
+  \item Ändring av eller tillägg till sektionens reglemente inklusive dess bilagor kan endast göras av sektionsmötet och om minst 2/3 av de närvarande är om beslutet ense.
+  \switchcolumn
+  \item \emph{Ändring av stadga eller reglemente görs av sektionsmötet. Kallelsen ska tydligt ange att fråga om ändring behandlas tillsammans med fullständigt förslag.}
+  \item \emph{Beslut om stadgeändring fattas med \sfrac{2}{3} majoritet.
+      Fastställande av beslutet görs med \sfrac{2}{3} majoritet på nästkommande sektionsmöte, dock tidigast efter fyra läsveckor förflutit.
+      Lydelsen får ej ändras vid fastställandet.}
+  \item \emph{Stadgeändring ska dessutom fastställas av Chalmers studentkårs styrelse.}
+  \item \emph{Beslut om reglementesändring fattas med \sfrac{2}{3} majoritet.}
+\end{lydelse}
+\setcounter{section}{15}
+\setcounter{subsection}{1}
+
+\subsection{Protokoll och tillkännagivande}
+\begin{lydelse}
+  \setcounter{section}{14}
+  \setcounter{subsection}{5}
+  \item Protokoll som förs i sektionens olika organ skall innehålla anteckningar om ärendenas art, samtliga ställda och ej återtagna yrkanden, beslut samt särskilda yttranden och reservationer.
+  \item Beslut som fattas inom sektionen och berör Chalmers Studentkår i dess helhet skall meddelas Chalmers Studentkårs styrelse.
+  \item Sektionens officiella kommunikationskanaler utgörs av sektionens hemsida samt sektionens officiella anslagstavla.
+  \item Meddelanden och beslut är behörigt anslagna då de anslås via någon av sektionens officiella kommunikationskanaler.
+  \switchcolumn
+  \item Protokoll som förs i sektionens organ ska innehålla anteckningar om ärendenas art, samtliga ställda och ej återtagna yrkanden, beslut samt särskilda yttranden och reservationer.
+  \item Protokoll och beslut \emph{tillkännages genom behörigt anslag enligt reglemente.}
+  \item Beslut \emph{fattade} inom sektionen som berör Chalmers studentkår i dess helhet \emph{meddelas} Chalmers studentkårs styrelse.
+\end{lydelse}
+\setcounter{section}{15}
+\setcounter{subsection}{2}
+
+\subsection{Tolkningstvister}
+\begin{lydelse}
+  \setcounter{section}{14}
+  \setcounter{subsection}{4}
+  \item Uppstår tolkningstvist om dessa stadgars tolkning skall frågan hänskjutas till sektionens inspektor.
+  \item Vid konflikt med reglemente eller Fysikteknologsektionens övriga styrdokument har stadgan företräde.
+  \switchcolumn
+  \item \emph{Vid konflikt med annat styrdokument har stadga och reglemente företräde. Vid konflikt med reglemente har stadga företräde.}
+  \item \emph{Vid tvist om stadgans tolkning avgörs frågan av inspektor.}
+\end{lydelse}
+
+\section{Upplösning}
+Syftet är redaktionellt.
+Kraven för upplösning justeras enligt ovanstående observationer.
+En ideell förening är en juridisk person med begränsat personligt ansvar; det finns ingen anledning att påtvinga ChS att åta sig sektionens skulder om den t.ex. skulle upplösas till följd av förestående konkurs.
+Det är också i linje med Skatteverkets instruktioner om avveckling av ideell förening.
+Med det sagt hindrar inget oss från att stadga disposition av eventuellt överskott.
+Dessutom bör vi bevara vår relativt långa historia sett till övriga sektioner och se till att arkivera handlingar om det värsta händer.
+
+Härigenom föreskrivs i fråga om stadgans kapitel 15
+\begin{dels}
+  \item att kapitlet omnumreras till 16,
+  \item att kapitlets rubrik ska lyda ''Upplösning'',
+  \item att kapitlet i sin helhet ska ha följande lydelse.
+\end{dels}
+\begin{lydelse}
+  \item Sektionen upplöses genom beslut på två på varandra följande sektionsmöten med minst 3/4 majoritet och minst 25 bifallande medlemmar.
+  \item Om sektionsmötet beslutar att upplösa sektionen skall samtliga dess tillgångar och skulder, som framgår av upprättad balansräkning, i och med upplösning tillfalla Chalmers Studentkår.
+  \item I det fall medlen utgörs av tillgångar skall Chalmers Studentkår fondera och förvalta dessa till ny sektion bildats för studerande på utbildningsprogrammet för Teknisk fysik och/eller Teknisk matematik eller motsvarande.
+  \switchcolumn
+  \item Sektionen upplöses genom beslut på två sektionsmöten, \emph{mellan vilka minst 4 läsveckor förflutit}, med \sfrac{3}{4} majoritet och minst 25 bifallande medlemmar.
+  \item \emph{Vid upplösning avvecklar sektionsstyrelsen snarast sektionen.
+      Eventuellt överskott tillfaller Chalmers studentkår.
+      Sektionens handlingar arkiveras på Göteborgs föreningsarkiv.}
+  \item \emph{Chalmers studentkår förvaltar eventuellt överskott i fond fram tills} ny sektion bildats för studerande på utbildningsprogrammet för Teknisk fysik och/eller Teknisk matematik eller motsvarande.
+\end{lydelse}
 
 \clearpage
 \part{Reglemente}
